Fix menu resizing issue and update styles

--- a/src/styles/main-styles.css
+++ b/src/styles/main-styles.css
@@ -3,3 +3,4 @@
 @import '@styles/StyleSheetSmallDevices.css';
 @import '@styles/StyleSheetMediumDevices.css';
 @import '@styles/StyleSheetLargeDevices.css';
+@import '@styles/StyleSheetExtraLargeDevices.css';
