--- a/src/styles/StyleSheet.css
+++ b/src/styles/StyleSheet.css
@@ -977,6 +977,7 @@ mark{
 
 .SeccionContenidoPaginaBuscador{
 	display:flex;
+	width:100%;
 	gap:2vw;
 	flex-direction: var(--OrientacionBusqueda);
 }
@@ -1009,6 +1010,7 @@ mark{
 	flex-direction: column;
 	height: -webkit-fill-available;
 	min-height: 0;
+	overflow-y: auto;
 }
 
 .LabelBuscadorFiltros{
@@ -1030,6 +1032,8 @@ mark{
 }
 
 .SubmitBusquedaFiltros{
+	display: block;
+	text-align: center;
 	width: 100%;
 	 border: 0 solid transparent;
 	 background-color: var(--ColorAcento);
@@ -1057,4 +1061,18 @@ mark{
 
 .hidden{
 	display:none;
+}
+
+.noPointerEvents{
+	pointer-events: none;
+}
+
+.opacity07{
+	opacity: 0.7;
+}
+
+.hovered:hover{
+	background: var(--ColorFondosHover);
+	border-radius: var(--RadioEsquinas);
+	cursor: pointer;
 }
