--- a/src/styles/Loading.css
+++ b/src/styles/Loading.css
@@ -11,3 +11,13 @@
 	75%  { content: '...'; }
 	100% { content: ''; }
 }
+
+.spinner {
+	animation: spin 1s linear infinite;
+	padding: unset !important;
+ }
+ 
+ @keyframes spin {
+	from { transform: rotate(0deg); }
+	to { transform: rotate(360deg); }
+ }
