--- a/src/styles/StyleSheet.css
+++ b/src/styles/StyleSheet.css
@@ -245,6 +245,8 @@
      display:flex;
      align-items: center;
      cursor: pointer;
+	  border: none;
+	  color: var(--ColorTextoAcento);
 }
  .LogoMenuLateral{
      height:var(--AlturaLogoPrincipal);
