--- a/src/styles/StyleSheet.css
+++ b/src/styles/StyleSheet.css
@@ -550,6 +550,7 @@
  .ContenedorTablaRecientes{
      overflow-y: auto;
      padding-right:20px;
+     margin-top: 20px;
 }
  .TablaRecientes{
      width:100%;
@@ -585,6 +586,10 @@
      overflow-y: auto;
      padding-right:15px;
      font-size: var(--TamanoFuenteParrafos);
+     margin-top:30px;
+     display: flex;
+     flex-direction: column;
+     row-gap: 2vw;
 }
  .ConceptoDefinicion{
      font-weight: var(--FuenteNegrilla);
@@ -774,11 +779,6 @@
  .BotonEliminarSubtermino img{
      filter: brightness(0);
      height: 20px;
-}
- .DefinicionTermino{
-     max-height: 200px;
-     overflow-y: auto;
-     padding-right: 16px;
 }
 /* Editar Terminos */
  .SeccionInputTitulo{
