--- a/src/styles/StyleSheet.css
+++ b/src/styles/StyleSheet.css
@@ -575,6 +575,15 @@
  .TablaTextoCentrado{
      text-align: center;
 }
+.TablaContenidoAcciones {
+    display: flex;
+    vertical-align: middle;
+    align-content: center;
+    flex-wrap: wrap;
+    column-gap: 15px;
+    height: 36px;
+    justify-content: center;
+}
  .IconosTabla{
      height:var(--AlturaIconosTabla);
 }
