--- a/src/styles/StyleSheet.css
+++ b/src/styles/StyleSheet.css
@@ -579,10 +579,10 @@
     display: flex;
     vertical-align: middle;
     align-content: center;
-    flex-wrap: wrap;
     column-gap: 12px;
     height: 36px;
     justify-content: center;
+    padding-top: 8px;
 }
  .IconosTabla{
      height:var(--AlturaIconosTabla);
