--- a/src/styles/StyleSheet.css
+++ b/src/styles/StyleSheet.css
@@ -726,6 +726,7 @@
      overflow-y: auto;
      padding-right:20px;
      max-height: 80svh;
+     margin-top: 20px;
 }
  .TablaUsuarios{
      width:100%;
@@ -1092,10 +1093,8 @@ mark{
 	font-size: var(--TamanoFuenteParrafos);
 	display: flex;
 	gap: 10px;
+    outline: none;
 }
 .SelectOrdenarPor select{
 	cursor: pointer;
-}
-.SelectOrdenarPor:hover, .SelectOrdenarPor:active, .SelectOrdenarPor:focus{
-    border: 0 solid transparent;
 }
