--- a/src/styles/StyleSheetExtraLargeDevices.css
+++ b/src/styles/StyleSheetExtraLargeDevices.css
@@ -21,6 +21,7 @@
        --MostrarFechaPublicacionTablaMaxWidth: none;
        --MostrarFechaPublicacionTablaTexto: inherit;
        --MostrarFechaPublicacionTablaVisibilidad:visible;
+       --PaddingBotonesBarraHerramientas:0 25px;
        --TextoExpandir:' Expandir';
        --TextoContraer:' Contraer';
    }
