--- a/src/styles/StyleSheet.css
+++ b/src/styles/StyleSheet.css
@@ -72,6 +72,7 @@
      --MostrarFechaPublicacionTablaMaxWidth: 0;
      --MostrarFechaPublicacionTablaTexto: 0px;
      --MostrarFechaPublicacionTablaVisibilidad:hidden;
+     --PaddingBotonesBarraHerramientas:0 16px;
      --TextoExpandir: '';
      --TextoContraer: '';
     /* Editar Terminos */
@@ -651,13 +652,12 @@
      background-color: var(--ColorAcento);
      border-radius: var(--RadioEsquinas);
      color:var(--ColorSecundario);
-     padding: var(--MarginElementos);
+     padding: var(--PaddingBotonesBarraHerramientas);
      font-size: var(--TamanoFuenteParrafos);
      justify-content: center;
      column-gap: 10px;
      display: flex;
      align-items: center;
-     min-width:186px;
      padding: var(--PaddingBotonAgregar);
      cursor: pointer;
 	  border-width: 0px;
@@ -714,7 +714,7 @@
 	justify-content: center;
 	align-items: center;
 	border: 0 solid transparent;
-	padding: var(--PaddingBotonAgregar);
+	padding: var(--PaddingBotonesBarraHerramientas);
 	display: var(--BuscadorDisplayBoton);
 	background-color: var(--ColorAcento);
 	color: var(--ColorTextoAcento);
@@ -724,7 +724,6 @@
 	font-weight: var(--FuenteNegrilla);
 	font-size: var(--TamanoFuenteParrafos);
 	cursor: pointer;
-	min-width: 120px;
 }
  .SubmitBusqueda:hover{
      background-color: var(--ColorAcentoHover);
@@ -902,7 +901,7 @@ a:visited{
 
 .dj_button{
 	border: 0 solid transparent;
-	padding: 0 16px;
+	padding: var(--PaddingBotonesBarraHerramientas);
 	background-color: var(--ColorAcento);
 	color: var(--ColorTextoAcento);
 	border-radius: var(--RadioEsquinas);
