Agregar termino after

--- a/src/styles/StyleSheet.css
+++ b/src/styles/StyleSheet.css
@@ -807,7 +807,7 @@
 .BotonContraer::after{
     content: var(--TextoContraer);
 }
-.BotonAgregarTermino{
+.BotonAgregarTermino::after{
     content: var(--TextoAgregarTermino);
 }
 /* Editar Terminos */
