--- a/src/styles/StyleSheetSmallDevices.css
+++ b/src/styles/StyleSheetSmallDevices.css
@@ -12,7 +12,7 @@
      --PaddingContenidosHome: 32px;
      /* Subpaginas */
      --SeccionSuperiorOrden: row;
-     --SeccionSuperiorAlineacion: stretch;
+     --SeccionSuperiorAlineacion: center;
      --BuscadorInputWidth: 300px;
   }
 }
