--- a/src/styles/StyleSheet.css
+++ b/src/styles/StyleSheet.css
@@ -608,6 +608,7 @@
      display: flex;
      flex-direction: column;
      row-gap: 2vw;
+     padding-bottom: 2px;
 }
  .ConceptoDefinicion{
      font-weight: var(--FuenteNegrilla);
