Update user-select property in StyleSheet.css

--- a/src/styles/StyleSheet.css
+++ b/src/styles/StyleSheet.css
@@ -87,11 +87,11 @@
      box-sizing: border-box;
      transition: background-color 0.5s, color 0.05s, filter 0.5s, border 0.5s;
      -webkit-tap-highlight-color: transparent;
-     user-select: none;
+     /* user-select: none;
      -moz-user-select: none;
      -khtml-user-select: none;
      -webkit-user-select: none;
-     -o-user-select: none;
+     -o-user-select: none; */
      word-wrap: break-word;
 }
  body{
@@ -142,7 +142,7 @@
 }
 /* Configuración Scroll */
  .ScrollVerde::-webkit-scrollbar {
-     width: 9px;
+     width: 11px;
      height: 6px;
     /* width */
 }
