--- a/src/styles/StyleSheet.css
+++ b/src/styles/StyleSheet.css
@@ -668,6 +668,8 @@
 }
 .BotonAgregarFixed{
     border-radius: 200px;
+    width: 50px;
+    height: 50px;
 }
  .BotonAgregar:hover, .BotonAgregarFixed:hover, .BotonEliminar:hover{
      background-color: var(--ColorAcentoHover);
