--- a/src/styles/StyleSheetExtraLargeDevices.css
+++ b/src/styles/StyleSheetExtraLargeDevices.css
@@ -25,6 +25,7 @@
        --TextoExpandir:' Expandir';
        --TextoContraer:' Contraer';
        --TextoAgregarTermino: ' Término';
+       --DireccionFlexSeccionContenidoHome: row;
    }
 
    /* --------------- INICIO ESTILO PÁGINA BUSCADOR --------------- */
