cambio direccion filtros

--- a/src/styles/StyleSheetExtraLargeDevices.css
+++ b/src/styles/StyleSheetExtraLargeDevices.css
@@ -26,6 +26,8 @@
        --TextoContraer:' Contraer';
        --TextoAgregarTermino: ' Término';
        --DireccionFlexSeccionContenidoHome: row;
+       --AnchoSeccionFiltros:32%;
+       --OrientacionBusqueda: row;
    }
 
    /* --------------- INICIO ESTILO PÁGINA BUSCADOR --------------- */
