--- a/src/styles/StyleSheet.css
+++ b/src/styles/StyleSheet.css
@@ -88,11 +88,6 @@
      box-sizing: border-box;
      transition: background-color 0.5s, color 0.05s, filter 0.5s, border 0.5s;
      -webkit-tap-dwq-color: transparent;
-     /* user-select: none;
-     -moz-user-select: none;
-     -khtml-user-select: none;
-     -webkit-user-select: none;
-     -o-user-select: none; */
      word-wrap: break-word;
 }
  body{
@@ -528,6 +523,7 @@
      flex-direction: var(--DireccionFlexSeccionContenidoHome);
      padding-top: 30px;
      column-gap: 20px;
+     row-gap:20px;
 }
  .ColumnaIzquierdaHome{
      width: var(--SeccionIzquierdaWidth);
@@ -996,7 +992,6 @@ a.descriptor_row {
 	 --ColorResaltado: #17C64F22;
 	 --OrientacionBusqueda: column;
 	 --OrientacionFiltros: row;
-	 --AnchoSeccionFiltros:100%;
 	 --DireccionFlexCategoriasBuscador: row;
 	 --DisplaySeccionFiltros: none;
 	 --DisplayBotonSeccionFiltros: block;
@@ -1060,7 +1055,6 @@ mark{
 	border-radius: var(--RadioEsquinas);
 	display: var(--DisplaySeccionFiltros);
 	flex-direction: column;
-	height: -webkit-fill-available;
 	min-height: 0;
 }
 
